--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
   async function reloadFact() {
     const randomInt = Math.floor(Math.random() * 9999) + 1;
     try {
-      const response = await fetch('http://localhost:8080/fact'); // Replace with the actual server endpoint
+      const response = await fetch('https://cow-facts-tutorial.vercel.app/fact'); // Replace with the actual server endpoint
       const data = await response.json();
       console.log(data)
       // Update the random number and fact in the DOM
